# LoginChecker

./: .gitignore  README.md  pyproject.toml
data/: generate.py  reader.py  test_generator.py  writer.py
report/: main.tex
src/algorithms/: __init__.py  algorithm.py  binary_search.py  linear_search.py
src/benchmark/: __init__.py  benchmark.py  generate_report_plots.py  run_billion_benchmark.py  simple_runner.py
src/data_structures/: __init__.py  bloom_filter.py  cuckoo_filter.py  disk_hashset.py  sorted_list.py
tests/: conftest.py  test_algorithm_base.py  test_binary_search.py  test_bloom_filter.py  test_cuckoo_filter.py  test_disk_hashset.py  test_integration.py  test_linear_search.py  test_sorted_list.py  test_username_generator.py  test_username_reader.py  test_username_writer.py
